--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,9 +3,7 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-{% if page.image %}
 <img class="post-image" src="{{ site.baseurl }}{{ page.image }}" alt="{{ page.title }}">
-{% endif %}
 {{ content }}
 <br/>
-<a href="{{ site.baseurl }}/blog"> Back to blog </a>
+<a href="{{ site.baseurl }}/projects"> Back to projects </a>
