--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                       <address>
                           <strong>{{ site.author }}</strong>
                           <br/>
-                          {{ site.author_title }} - <a href="mailto:{{ site.email}}">{{ site.email }}</a>
+                          <a href="mailto:{{ site.email}}">{{ site.email }}</a>
                       </address>
                   </div>
                   <div class="col-md-6 pull-right address-right">
@@ -49,7 +49,7 @@
                       <address>
                           <strong>{{ site.author }}</strong>
                           <br/>
-                          {{ site.author_title }} - <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                          <a href="mailto:{{ site.email }}">{{ site.email }}</a>
                           <br/>
                           <a href="{{ site.department_url }}">{{ site.department }}</a>
                           <br/>
